--- a/db/work/impl1/synlog/report/common_impl1_compiler_runstatus.xml
+++ b/db/work/impl1/synlog/report/common_impl1_compiler_runstatus.xml
@@ -10,32 +10,32 @@ The file contains the job information from compiler to be displayed as part of t
     <title>Synopsys HDL Compiler</title>
   </report_link> 
   <job_status>
-    <data>Failed    </data>
+    <data>Completed    </data>
   </job_status>
 <job_info> 
 			<info name="Notes">
-  <data>9</data>
+  <data>10</data>
   <report_link name="more"><data>C:\Users\eidos\GitHub\CURRENT_WAV_CTRL_FPGA\db\work\impl1\synlog\report\common_impl1_compiler_notes.txt</data></report_link>
   </info>
 			<info name="Warnings">
-  <data>42</data>
+  <data>46</data>
   <report_link name="more"><data>C:\Users\eidos\GitHub\CURRENT_WAV_CTRL_FPGA\db\work\impl1\synlog\report\common_impl1_compiler_warnings.txt</data></report_link>
   </info>
 			<info name="Errors">
-  <data>7</data>
+  <data>0</data>
   <report_link name="more"><data>C:\Users\eidos\GitHub\CURRENT_WAV_CTRL_FPGA\db\work\impl1\synlog\report\common_impl1_compiler_errors.txt</data></report_link>
   </info>
 			<info name="CPU Time">
   <data>-</data>
   </info>
 			<info name="Real Time">
-  <data>00h:00m:01s</data>
+  <data>00h:00m:02s</data>
   </info>
 			<info name="Peak Memory">
   <data>-</data>
   </info>
 			<info name="Date &amp;Time">
-  <data type="timestamp">1660186038</data>
+  <data type="timestamp">1660199365</data>
   </info>
 			</job_info>
 </job_run_status>
